man: Update mkcephfs(8) to remove --mkbtrfs.
Signed-off-by: Tommi Virtanen <tommi.virtanen@dreamhost.com>

--- a/man/mkcephfs.8
+++ b/man/mkcephfs.8
@@ -1,4 +1,4 @@
-.TH "MKCEPHFS" "8" "September 27, 2012" "dev" "Ceph"
+.TH "MKCEPHFS" "8" "October 09, 2012" "dev" "Ceph"
 .SH NAME
 mkcephfs \- create a ceph file system
 .
@@ -32,7 +32,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .
 .SH SYNOPSIS
 .nf
-\fBmkcephfs\fP \-c \fIceph.conf\fP [ \-\-mkbtrfs ] [ \-a, \-\-all\-hosts [ \-k
+\fBmkcephfs\fP \-c \fIceph.conf\fP [ \-a, \-\-all\-hosts [ \-k
 \fI/path/to/admin.keyring\fP ] ]
 .fi
 .sp
@@ -108,22 +108,6 @@ When \fB\-a\fP is used, we can specify a location to copy the
 client.admin keyring, which is used to administer the cluster. The
 default is \fB/etc/ceph/keyring\fP (or whatever is specified in the
 config file).
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-mkbtrfs
-Create and mount the any btrfs file systems specified in the
-ceph.conf for OSD data storage using mkfs.btrfs. The "btrfs devs"
-and (if it differs from "osd data") "btrfs path" options must be
-defined.
-.sp
-\fBNOTE\fP Btrfs is still considered experimental.  This option
-can ease some configuration pain, but is the use of btrfs is not
-required when \fBosd data\fP directories are mounted manually by the
-adminstrator.
-.sp
-\fBNOTE\fP This option is deprecated and will be removed in a future
-release.
 .UNINDENT
 .INDENT 0.0
 .TP
